Fixed logo alignment

--- a/themes/openstack/css/combined.css
+++ b/themes/openstack/css/combined.css
@@ -1741,6 +1741,7 @@ footer {
 .summit-banner.editorial .logo-box img {
 width: 50%;
 margin: 15px auto 0;
+text-align:center;
 }
 
 .summit-banner.highlight .line{
